# Yggdrasil

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  BUILD.md  CONTRIBUTING.md  LICENSE  Manifest.toml  Project.toml  README.md  RootFS.md  add_builders.jl  azure-pipelines.yml  build.yml  build_hashes.jl  build_rootfs.sh  checksum.jl  clean_builds.sh  clean_products.sh  common.jl  fancy_toys.jl  generate_buildjl.jl  install_dev_rootfs.sh  jll-versions.json  push_rootfs.sh  rdependencies.sh  recursively_regenerate_jlls.jl  reproducibility_scanning_tools.jl
.buildkite/: 0_webui.yml  0_webui_yggdrasil_register.yml  Manifest.toml  NOTES.md  Project.toml  README.md  build.sh  generator.jl  init.sh  pipeline.yml  pipeline.yml.signature  pipeline_register.yml  register.sh  register_pipeline.yml  utils.jl
.buildkite/cryptic_repo_keys/: repo_key.2297e5e7
.buildkite/path_processors/: per-project
.ci/: .env  Makefile  Manifest.toml  Project.toml  docker-compose.yml  download_sources.jl  generate_platforms.jl  jll_init.jl  register_package.jl
.ci/azp_agent/: .env  .gitattributes  agent_startup.conf  debug_agent.sh  install_agents.sh  loopback_startup.conf  (+6 more)
.claude/: Manifest.toml  Project.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: component_owners.yml
0_RootFS/: build_rootfs.sh  checksum.jl  common.jl  cull_old_shards.jl  gcc_common.jl  gcc_sources.jl  insert_bootstrap.jl  install_dev_rootfs.sh  llvm_common.jl  llvm_common_10+.jl  ocaml_common.jl  push_rootfs.sh
A/AWSCRT/bundled/awscrt/: CMakeLists.txt
A/accerionbindings/accerionbindings/: CMakeLists.txt  LICENSE  accerionbindings.cpp
Arpack/: build_tarballs.jl
B/blockSQP/bundled/: CMakeLists.txt  blockSQP_julia.cpp
B/blockSQP/bundled/patches/: remove_blas.patch
BaseCompilerShard/: build_tarballs.jl
Binutils/: build_tarballs.jl
Bzip2/: build_tarballs.jl
C/CImGui/bundled/wrapper/: CMakeLists.txt  helper.c  helper.h
C/CImPlot/bundled/cmake/: CMakeLists.txt
C/CImPlot3D/bundled/: CMakeLists.txt
C/CSPICE/bundled/cmake/: CMakeLists.txt  brief.cmake  chronos.cmake  ckbrief.cmake  commnt.cmake  cspice.cmake  csupport.cmake  dskbrief.cmake  dskexp.cmake  frmdiff.cmake  inspekt.cmake  mkdsk.cmake  mkspk.cmake  msopck.cmake  spacit.cmake  spkdiff.cmake  spkmerge.cmake  src.cmake  tobin.cmake  toxfr.cmake  version.cmake
C/cimnodes_editor/bundled/: CMakeLists.txt
CFITSIO/: build_tarballs.jl
CUDA/: build_tarballs.jl
D/d4/patches/: 01-glucose-fpu-fix.patch  02-disable-patoh.patch  03-portability-fixes.patch  CMakeLists.txt  d4-all-fixes.patch  patch_source.sh
Emscripten/: README.md  build_tarballs.jl
FreeBSDLibc/: build_tarballs.jl
G/GeographicLibWrapper/src/: CMakeLists.txt  GeographicLibWrapper.cpp
G/gecko/bundled/geckowrapper/: CMakeLists.txt  geckowrapper.cxx
GCC/: README.md  build_tarballs.jl  global_warming.sh  make_buildjl_files.jl  make_squashfs_files.jl
GCCBootstrap/: build_tarballs.jl
GMP/: build_tarballs.jl
GR/: build_tarballs.jl
Glibc/: README.md  build_tarballs.jl
GnuTLS/: build_tarballs.jl
HDF5/: build_tarballs.jl
Hwloc/: build_tarballs.jl
I/IGLWrap/iglwrap/: CMakeLists.txt  iglwrap.cpp  iglwrap.h
I/IGLWrap/iglwrap/cmake/: libigl.cmake
I/ITKIOWrapper/src/: CMakeLists.txt  itklib.cpp
J/jinja2cppwrapper/bundled/: CMakeLists.txt
J/jinja2cppwrapper/bundled/include/: error_info_wrap.h  filesystem_handler_wrap.h  result_wrap.h  template_env_wrap.h  template_wrap.h  value_wrap.h
J/jinja2cppwrapper/bundled/src/: error_info_wrap.cpp  filesystem_handler_wrap.cpp  result_wrap.cpp  template_env_wrap.cpp  template_wrap.cpp  value_wrap.cpp
J/jinja2cppwrapper/src/: CMakeLists.txt  jinja2cpp_wrapper.cpp
Julia/: build_tarballs.jl
K/KMC/bundled/: CMakeLists.txt
K/KMC/bundled/patches/: drop_prepackaged_libs.patch  fix-missing-includes.patch  unvendor_paths.patch
KernelHeaders/: build_tarballs.jl
L/: lfr_benchmark
LLVM/: README.md  build_tarballs.jl  make_squashfs_files.jl
LLVMBootstrap/: build_tarballs.jl
LibCURL/: README.md  build_tarballs.jl
LibGit2/: build_tarballs.jl
LibSSH2/: build_tarballs.jl
LibUV/: build_tarballs.jl
LibUnwind/: build_tarballs.jl
Libc/: build_tarballs.jl
Libffi/: build_tarballs.jl
Libiconv/: build_tarballs.jl
Linux/: build_tarballs.jl
M/: MSTM3  build_tarballs.jl
M/Mesa/bundled/: llvm-config  meson.build
M/Mesa/bundled/patches/: meson_llvm.patch
MKL/: build_tarballs.jl
MPFR/: build_tarballs.jl
MacOSLibc/: README.md
Mingw/: build_tarballs.jl
Musl/: build_tarballs.jl
NNPACK/: build_tarballs.jl
Nettle/: build_tarballs.jl
Objconv/: build_tarballs.jl
OpenBLAS/: build_tarballs.jl
OpenSSL/: build_tarballs.jl
PALISADE/: build_tarballs.jl
PCRE/: build_tarballs.jl
PCRE2/: build_tarballs.jl
Patchelf/: build_tarballs.jl
Qemu/: build_tarballs.jl
R/: build_tarballs.jl
Rootfs/: build_tarballs.jl
S/Snowball/bundled/: CMakeLists.txt  Makefile
Sandbox/: build_tarballs.jl
SuiteSparse/: build_tarballs.jl
SuiteSparse4/: build_tarballs.jl
Sundials/: README.md
SuperBinutils/: build_tarballs.jl
T/tree_sitter_html/bundled/: CMakeLists.txt
T/tree_sitter_javascript/bundled/: CMakeLists.txt
T/tree_sitter_mlir/bundled/: CMakeLists.txt
T/tree_sitter_modelica/bundled/: CMakeLists.txt
T/tree_sitter_nonmem/bundled/: CMakeLists.txt
T/tree_sitter_ocaml/bundled/: CMakeLists.txt
T/tree_sitter_php/bundled/: CMakeLists.txt
T/tree_sitter_python/bundled/: CMakeLists.txt
T/tree_sitter_typescript/bundled/: CMakeLists.txt
V/vmecpp_julia/bundled/: CMakeLists.txt  vmecpp_julia.cpp
W/: web3go
WCSLIB/: build_tarballs.jl
Wine/: build_tarballs.jl
X/XyceWrapper/src/: CMakeLists.txt  xycelib.cpp
XGBoost/: build_tarballs.jl
XML2/: build_tarballs.jl
XRTServer/: build_tarballs.jl
XRTServer_lite/: build_tarballs.jl
XSLT/: build_tarballs.jl
XZ/: build_tarballs.jl
Y/YosysWrapper/src/: CMakeLists.txt  LICENSE  yosyswrapper.cpp
Zstd/: build_tarballs.jl
contrib/: dependency_tree.jl
dmg2img/: build_tarballs.jl
libffi/: build_tarballs.jl
ntl/: build_tarballs.jl
(+5844 files in other folders)
